--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ figure {
 }
 
 #wrapper {
-    margin:0 15px;
+    /* margin:0 15px; */
     /* padding: 15px 0; */
     position: relative;
 }
@@ -789,6 +789,11 @@ h6 {
 
 #banner h1 {
     padding-top: 5%;
+}
+
+#banner h3{
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #banner .section-heading:before {
