--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 1. Default and Reset styles
 - 1.1 Input Elements
+- 1.2 Font
 2. Global elements
 - 2.1 Header
 - 2.2 Logo
@@ -29,6 +30,9 @@
 /*------------------------------------------------------------------------------------------*/
 /* 1. Defaults & Reset of specific styles across browsers */
 /*------------------------------------------------------------------------------------------*/
+html {
+    scroll-behavior: smooth;
+}
 
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
@@ -173,6 +177,17 @@ input:focus, textarea:focus {
 
 *:focus {
     outline: none;
+}
+
+/* --------- 1.2 Font ---------- */
+@font-face {
+    font-family: "Miriam Libre";
+    src: url(../fonts/MiriamLibre-Regular.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-Regular.ttf) format("truetype");
 }
 
 /*------------------------------------------------------------------------------------------*/
@@ -353,7 +368,7 @@ section {
 }
 
 #logo img {
-    max-height: 22px;
+    max-height: 52px;
     vertical-align: middle;
     margin-right: 15px;
 }
@@ -552,7 +567,7 @@ section {
     display: inline-block;
     width: 38px;
     height: 71px;
-    color: #111;
+    color: #ccc;
     cursor: pointer;
     text-transform: uppercase;
     font-size: 22px;
@@ -578,6 +593,7 @@ section {
 }
 
 #nav-trigger span.open:after {
+    color: #ccc;
     content: "\f00d";
 }
 
@@ -819,6 +835,10 @@ h6 {
 }
 
 /*Icon Block*/
+.icon img {
+    max-height: 75px;
+    float: right;
+}
 
 .icon-block {
     position: relative;
