--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,10 @@ section {
     width: 38.2%;
 }
 
+.fullscreen {
+    min-height: 100vh;
+}
+
 /* --------- 2.1 Header --------- */
 
 #header {
@@ -368,7 +372,7 @@ section {
 }
 
 #logo img {
-    max-height: 52px;
+    max-height: 50px;
     vertical-align: middle;
     margin-right: 15px;
 }
@@ -790,6 +794,10 @@ h6 {
     padding-bottom: 0;
 }
 
+.right-side {
+    text-align: right;
+}
+
 /*------------------------------------------------------------------------------------------*/
 /* 4. Banner */
 /*------------------------------------------------------------------------------------------*/
@@ -947,6 +955,11 @@ h6 {
 
 .features div:nth-child(4) {
     clear: both;
+}
+
+/* Excel In Life */
+#excel-in-life {
+    background-color: #F2F2EE;
 }
 
 /* --------- 6.3 Testimonials ---------- */
