--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,19 @@ section {
     min-height: 100vh;
 }
 
+.section-size {
+    height: 80vh;
+}
+
+#expand-influence .section-subtitle{
+    padding-left: 30vw;
+    padding-right: 30vw;
+}
+
+#expand-influence .placeholder-element {
+    height: 12.5vh;
+}
+
 /* --------- 2.1 Header --------- */
 
 #header {
@@ -955,11 +968,6 @@ h6 {
 
 .features div:nth-child(4) {
     clear: both;
-}
-
-/* Excel In Life */
-#excel-in-life {
-    background-color: #F2F2EE;
 }
 
 /* --------- 6.3 Testimonials ---------- */
@@ -2145,6 +2153,10 @@ blockquote {
     #wrapper {
         margin:0;
         padding:0;
+    }
+
+    .section-size {
+        height: auto;
     }
 
     .page-border, #scrollUp, #scrollUp:before {
