Refactor code and major front end changes

--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -134,9 +134,11 @@ h2:after {
     background-size:cover;
     background-position-y: -25px;
     background-color: #F2F2EE;
-
+    min-height: 70vh;
 }
 
+
+/* Site sections customization */
 #expand-influence {
     background: url("../images/banner-images/expand-influence.png") no-repeat center top;
     background-size:cover;
@@ -151,7 +153,32 @@ h2:after {
 
 #excel-in-life h2::after {
     width: 30px;
-    margin-left: 22vw;
+    /* margin-left: 22vw; */
+}
+
+#testimonials {
+    background: #F2F2EE;
+}
+
+#contact {
+    background-color: #000;
+    background: url("../images/banner-images/footer.png") no-repeat center top;
+    background-size:cover;
+    min-height: 25vh;
+}
+
+#contact .section-heading{
+    margin: auto;
+    display: inline-block;
+    width: 50%;
+}
+
+#contact .section-title{
+    color: #fff;
+}
+
+#contact h4 {
+    color: #fff;
 }
 
 /*------------------------------------------------------------------------------------------*/
@@ -160,7 +187,7 @@ h2:after {
 
 
 body {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     font-size:15px;
     font-weight:normal;
     color:#111;
@@ -188,7 +215,7 @@ body {
 /* Banner Typography */
 
 #banner h1 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     font-size: 52px;
     font-weight:600;
     text-align: center;
@@ -196,7 +223,7 @@ body {
 }
 
 #banner h3 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     font-size: 30px;
     font-weight: 400;
     text-align: center;
@@ -207,14 +234,14 @@ body {
 /* Section Title and Subtitle */
 
 .section-title {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 34px; 
     font-weight:700;
     color:#000;
 }
 
 .section-subtitle {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     font-size: 22px;
     font-weight:300;
     color:#000;
@@ -223,7 +250,7 @@ body {
 /* Testimonial */
 
 .testimonial q {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     font-size: 17px; 
     font-weight:300;
 }
@@ -236,42 +263,42 @@ body {
 /* Standard Headings h1-h6 */
 
 h1 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 40px; 
     font-weight:300;
     color:#111;
 }
 
 h2 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 34px; 
     font-weight:300;
     color:#111;
 }
 
 h3 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 30px; 
     font-weight:700;
     color:#111;
 }
 
 h4 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 18px; 
     font-weight:400;
     color:#111;
 }
 
 h5 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 16px; 
     font-weight:400;
     color:#111;
 }
 
 h6 {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size: 14px; 
     font-weight:400;
     color:#111;
@@ -288,7 +315,7 @@ h6 {
 /* Button Text */
 
 .button, input[type="submit"]  {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size:14px;
     font-weight:bold;
     color:#111;
@@ -316,7 +343,7 @@ h6 {
 /* Button Text */
 
 #banner .button {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Miriam Libre', Helvetica, sans-serif;
     font-size:16px;
     color:#fff;
     text-align: center;
@@ -343,14 +370,15 @@ h6 {
 /*------------------------------------------------------------------------------------------*/
 
 #landing-footer, #landing-footer p, #landing-footer a {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    font-size:12px;
-    font-weight:normal;
-    color:#999;
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    font-size:16px;
+    font-weight:bold;
+    color:#fff;
+    background-color: #111;
 }
 
 /* Footer Icon Color */
 
 #landing-footer i {
-    color:#999;
+    color:#fff;
 }
