--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ section {
 
 #logo {
     float: left;
-    height: 71px;
+    height: 72px;
     line-height: 66px;
     margin-right: 15px;
 }
@@ -831,17 +831,12 @@ h6 {
 }
 
 #banner-content.row {
-    padding-top: 30vh;
+    padding-top: 20vh;
     padding-bottom: 100px;
 }
 
 #banner h1 {
     padding-top: 5%;
-}
-
-#banner h3{
-    margin-left: 10%;
-    margin-right: 10%;
 }
 
 #banner .section-heading:before {
@@ -992,8 +987,21 @@ h6 {
 
 /* --------- 6.3 Testimonials ---------- */
 
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: #fff;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
 .testimonial {
     padding: 15px;
+    margin: 5px;
 }
 
 blockquote {
@@ -1560,6 +1568,9 @@ blockquote {
 /*------------------------------------------------------------------------------------------*/
 /* 7. Footer */
 /*------------------------------------------------------------------------------------------*/
+#footer-logo {
+    height: 80px;
+}
 
 #landing-footer {
     clear: both;
