More readability hacks

--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -140,6 +140,11 @@ h2:after {
     background-size: cover;
 }
 
+#banner-content mark {
+    background-color: #2b2b2b;
+    color: #fff;
+}
+
 mark {
     background-color: white;
 }
