change homepage text color

--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -54,7 +54,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Transparent Navigation Color on a Banner */
 
 #header nav a, #header i {
-    color:#F18B15;
+    color:#fff;
     font-weight: bold;
 }
 
