update background color to make it according to design

--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -130,7 +130,7 @@ h2:after {
 
 #banner {
     background: url("../images/banner-images/hero-graphic.png") no-repeat right bottom;
-    background-color: #2B2B2B;
+    background-color: #1E1E19;
     background-size: 55%;
     background-position-y: 80%;
 }
