phone ui overhaul

--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -137,7 +137,7 @@ h2:after {
 
 /* Site sections customization */
 #equipping {
-    background: url("../images/banner-images/skills.png") no-repeat right bottom;
+    background: url("../images/banner-images/equipping.png") no-repeat right bottom;
     background-size: cover;
 }
 
@@ -157,9 +157,28 @@ mark {
 }
 
 @media (max-width: 480px) {
-    #excel-in-life{
-        background: unset;
-        background-color: #F2F2EE
+    #banner {
+        background-size: 55%;
+        background-position-y: 95%;
+    }
+
+    #equipping {
+        background: url("../images/banner-images/equipping-mobile.png") no-repeat center;
+        background-size: 100%;
+        background-position-y: 28%;
+        background-position-x: 100%;
+    }
+
+    #excel-in-life {
+        background: url("../images/banner-images/excel-in-life-mobile.png") no-repeat left bottom;
+        background-size: 110%;
+        background-color: #F2F2EE;
+    }
+
+    #expand-influence {
+        background: url("../images/banner-images/expand-influence-mobile.png") no-repeat center;
+        background-size: 100%;
+        background-position-y: 33%;
     }
 }
 
