--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -413,7 +413,7 @@ h6 {
 /* 7. Footer */
 /*------------------------------------------------------------------------------------------*/
 
-#landing-footer, #landing-footer p, #landing-footer a {
+#landing-footer, #landing-footer p{
     font-family: 'Montserrat', Helvetica, sans-serif;
     font-size:16px;
     font-weight:bold;
