--- a/css/style.css
+++ b/css/style.css
@@ -1613,6 +1613,17 @@ blockquote {
     margin: 0;
 }
 
+#landing-footer .invis {
+    font-size: 8px;
+    font-weight: 100;
+    padding-top: 0px;
+    color: #ccc;
+}
+
+#landing-footer .invis  a:link {
+    color:inherit;
+}
+
 #landing-footer ul {
     list-style: none;
     text-align: right;
